// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`footnotes "HTML: basic" 1`] = `
VFile {
  "contents": "<h1 id=\\"root\\">Root</h1>
<p>Fugit et dolores velit dicta officiis.
Architecto saepe repudiandae sunt sed labore. <a id=\\"fnref-1\\" class=\\"fnref\\" href=\\"#fn-1\\">1</a></p>
<p>Et maiores magnam mollitia <a id=\\"fnref-magni\\" class=\\"fnref\\" href=\\"#fn-magni\\">magni</a> quas porro tenetur.</p>
<hr>
<strong>Children</strong>
<ol>
<li><a href=\\"bar\\">Bar</a></li>
<li><a href=\\"foo\\">Foo</a></li>
</ol>
<h2 id=\\"footnotes\\">Footnotes</h2>
<ol>
<li><span id=\\"fn-1\\" style=\\"width: 0; height: 0;\\"></span><p>nesciunt ullam quos<a class=\\"fn\\" href=\\"#fnref-1\\">˄</a></p></li>
<li><span id=\\"fn-magni\\" style=\\"width: 0; height: 0;\\"></span><p>Culpa repellat voluptatem magni.<a class=\\"fn\\" href=\\"#fnref-magni\\">˄</a></p></li>
</ol>",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`footnotes "HTML: footnote containing link" 1`] = `
VFile {
  "contents": "<h1 id=\\"root\\">Root</h1>
<p>Fugit et dolores velit dicta officiis.
Architecto saepe repudiandae sunt sed labore. <a id=\\"fnref-1\\" class=\\"fnref\\" href=\\"#fn-1\\">1</a></p>
<p>Et maiores magnam <a id=\\"fnref-magni\\" class=\\"fnref\\" href=\\"#fn-magni\\">magni</a> mollitia quas porro tenetur.</p>
<hr>
<strong>Children</strong>
<ol>
<li><a href=\\"bar\\">Bar</a></li>
<li><a href=\\"foo\\">Foo</a></li>
</ol>
<h2 id=\\"footnotes\\">Footnotes</h2>
<ol>
<li><span id=\\"fn-1\\" style=\\"width: 0; height: 0;\\"></span><p>nesciunt ullam <a href=\\"http://example.com\\">quos</a><a class=\\"fn\\" href=\\"#fnref-1\\">˄</a></p></li>
<li><span id=\\"fn-magni\\" style=\\"width: 0; height: 0;\\"></span><p>Culpa repellat voluptatem magni.<a class=\\"fn\\" href=\\"#fnref-magni\\">˄</a></p></li>
</ol>",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`footnotes "HTML: note with reference, with both note and reference containing footnotes" 1`] = `
VFile {
  "contents": "<h1 id=\\"root\\">Root</h1>
<p>Fugit et dolores velit dicta officiis.
Architecto saepe repudiandae sunt sed labore. <a id=\\"fnref-1\\" class=\\"fnref\\" href=\\"#fn-1\\">1</a></p>
<p></p><p></p><div class=\\"portal-container\\">
<div class=\\"portal-head\\">
<div class=\\"portal-backlink\\">
<div class=\\"portal-title\\">From <span class=\\"portal-text-title\\">Target</span></div>
<a href=\\"target\\" class=\\"portal-arrow\\">Go to text <span class=\\"right-arrow\\">→</span></a>
</div>
</div>
<div id=\\"portal-parent-anchor\\" class=\\"portal-parent\\" markdown=\\"1\\">
<div class=\\"portal-parent-fader-top\\"></div>
<div class=\\"portal-parent-fader-bottom\\"></div><p>Odio delectus veniam qui molestiae tenetur. <a id=\\"fnref-1\\" class=\\"fnref\\" href=\\"#fn-1\\">1</a>
Ipsum iusto impedit provident. <a id=\\"fnref-vel\\" class=\\"fnref\\" href=\\"#fn-vel\\">vel</a></p>
<hr>
<h2 id=\\"footnotes\\">Footnotes</h2>
<ol>
<li><span id=\\"fn-1\\" style=\\"width: 0; height: 0;\\"></span><p>Animi eius nesciunt.<a class=\\"fn\\" href=\\"#fnref-1\\">˄</a></p></li>
<li><span id=\\"fn-vel\\" style=\\"width: 0; height: 0;\\"></span><p>Vel omnis deleniti omnis.<a class=\\"fn\\" href=\\"#fnref-vel\\">˄</a></p></li>
</ol>
</div></div><p></p><p></p>
<p>Et maiores magnam <a id=\\"fnref-magni\\" class=\\"fnref\\" href=\\"#fn-magni\\">magni</a> mollitia quas porro tenetur.</p>
<hr>
<strong>Children</strong>
<ol>
<li><a href=\\"bar\\">Bar</a></li>
<li><a href=\\"foo\\">Foo</a></li>
<li><a href=\\"target\\">Target</a></li>
</ol>
<h2 id=\\"footnotes-1\\">Footnotes</h2>
<ol>
<li><span id=\\"fn-1\\" style=\\"width: 0; height: 0;\\"></span><p>nesciunt ullam quos<a class=\\"fn\\" href=\\"#fnref-1\\">˄</a></p></li>
<li><span id=\\"fn-magni\\" style=\\"width: 0; height: 0;\\"></span><p>Culpa repellat voluptatem magni.<a class=\\"fn\\" href=\\"#fnref-magni\\">˄</a></p></li>
</ol>",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`footnotes "HTML: unused footnote" 1`] = `
VFile {
  "contents": "<h1 id=\\"root\\">Root</h1>
<p>Fugit et dolores velit dicta officiis.
Architecto saepe repudiandae sunt sed labore. <a id=\\"fnref-1\\" class=\\"fnref\\" href=\\"#fn-1\\">1</a></p>
<p>Et maiores magnam mollitia quas porro tenetur.</p>
<hr>
<strong>Children</strong>
<ol>
<li><a href=\\"bar\\">Bar</a></li>
<li><a href=\\"foo\\">Foo</a></li>
</ol>
<h2 id=\\"footnotes\\">Footnotes</h2>
<ol>
<li><span id=\\"fn-1\\" style=\\"width: 0; height: 0;\\"></span><p>nesciunt ullam quos<a class=\\"fn\\" href=\\"#fnref-1\\">˄</a></p></li>
</ol>",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;
